# AppsView

./: README.md  com.github.netusmx.appsview.yml  meson.build
data/: application.css  apps-view.gresource.xml  com.github.netusMX.AppsView.appdata.xml.in  com.github.netusMX.AppsView.desktop.in  meson.build
po/extra/: POTFILES
src/: Application.vala  AppsView.vala  AppsViewWindow.vala  meson.build
src/Backend/: App.vala  AppCenter.vala  AppSystem.vala  SynapseSearch.vala
src/Views/: GridView.vala  SearchView.vala
src/Widgets/: AppButton.vala  AppContextMenu.vala  AppListBox.vala  BackgroundImage.vala  BlurBackground.vala  PageChecker.vala  SearchItem.vala  Switcher.vala
